--- a/src/main/resources/views/layouts/sidebar.html
+++ b/src/main/resources/views/layouts/sidebar.html
@@ -2,7 +2,7 @@
   <!-- Sidebar below header -->
   <div
     id="sidebar"
-    class="sticky top-16 h-[calc(100vh-4rem)] w-64 bg-white shadow-lg sidebar-transition sidebar-expanded overflow-y-auto transform transition-transform duration-300 -translate-x-full lg:translate-x-0 border-r-2"
+    class="sticky top-16 w-[22.5rem] bg-white shadow-lg sidebar-transition sidebar-expanded sidebar-no-scroll transform transition-transform duration-300 -translate-x-full lg:translate-x-0 border-r-2"
   >
     <!-- Navigation (rendered by JS) -->
     <nav id="adminSidebarNav" class="p-4 space-y-2 select-none"></nav>
