update done category product

--- a/src/main/resources/views/layouts/authLayout.html
+++ b/src/main/resources/views/layouts/authLayout.html
@@ -181,7 +181,7 @@
         </aside>
 
         <!-- Page content -->
-        <main id="page-content" class="flex-1 ">
+        <main id="page-content" class="flex-1 bg-white">
           <div th:replace="${content}"></div>
         </main>
       </div>
